--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -2,9 +2,9 @@ doctype
 html
    head
       link(href="/favicon.ico", rel="short-icon", type="image/x-icon")
-      link(rel="stylesheet", href="/css/boostrap.css")
-      link(rel="stylesheet", href="/css/vendor/toastr/toastr.css")
-      link(rel="stylesheet", href="/css/site.css")
+      link(rel="stylesheet", href="css/bootstrap.css")
+      link(rel="stylesheet", href="vendor/toastr/toastr.css")
+      link(rel="stylesheet", href="css/site.css")
    body
       block main-content
       include scripts
