--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -1,5 +1,6 @@
-script(type="text/javascript" src="/js/vendor/jquery.js")
-script(type="text/javascript" src="/js/vendor/angular.js")
-script(type="text/javascript" src="/js/vendor/angular-resource.js")
-script(type="text/javascript" src="/js/vendor/angular-route.js")
-script(type="text/javascript" src="/js/vendor/toastr.js")
+script(type="text/javascript" src="js/vendor/jquery.js")
+script(type="text/javascript" src="js/vendor/angular.js")
+script(type="text/javascript" src="js/vendor/angular-resource.js")
+script(type="text/javascript" src="js/vendor/angular-route.js")
+script(type="text/javascript" src="js/vendor/toastr.js")
+script(type="text/javascript" src="app/app.js")
